# velox

./: CMakeLists.txt  Makefile
-DVELOX_BUILD_TESTING=ON -DVELOX_ENABLE_BENCHMARKS=ON -DVELOX_ENABLE_PARQUET=ON -DENABLE_ALL_WARNINGS=ON/: compile_commands.json
.github/workflows/: macos.yml
scripts/: setup-adapters.sh  setup-macos.sh
velox/: CMakeLists.txt
velox/buffer/: Buffer.h  BufferUtils.h  CMakeLists.txt
velox/connectors/: Connector.h
velox/dwio/: CMakeLists.txt
velox/dwio/parquet/reader/: BooleanColumnReader.h  CMakeLists.txt  Decoder.cpp  Decoder.h  FloatingPointColumnReader.h  IntegerColumnReader.h  NativeParquetColumnReader.cpp  NativeParquetColumnReader.h  NativeParquetReader.cpp  NativeParquetReader.h  NestedStructureDecoder.cpp  NestedStructureDecoder.h  PageReader.cpp  PageReader.h  ParquetColumnReader.cpp  ParquetData.cpp  ParquetData.h  ParquetNestedColumnReader.cpp  ParquetNestedColumnReader.h  ParquetReader.cpp  ParquetReader.h  ParquetThriftTypes.cpp  ParquetThriftTypes.h  ReaderUtil.h  RepeatedColumnReader.cpp  RepeatedColumnReader.h  RleBpDecoder.cpp  Statistics.h  StringColumnReader.cpp  StructColumnReader.cpp  StructColumnReader.h  ThriftTransport.h
velox/exec/: CMakeLists.txt  CallbackSink.h  Driver.cpp  Driver.h  Exchange.cpp  Exchange.h  ExchangeClient.cpp  ExchangeClient.h  ExchangeQueue.cpp  ExchangeQueue.h  ExchangeSource.h  FilterProject.h  HashAggregation.h  HashBuild.h  HashPartitionFunction.cpp  HashPartitionFunction.h  HashProbe.h  HashTable.h  LocalPlanner.cpp  Merge.cpp  Merge.h  MergeJoin.h  MergeSource.cpp  Operator.cpp  Operator.h  OptimizedPartitionedOutput.cpp  OptimizedPartitionedOutput.h  Task.cpp  (+14 more)
(+124 files in other folders)
